<resources>
    <string name="app_name">RollAndLoad</string>
    <string name="facebook_app_id">1061378927569990</string>
    <string name="fb_login_protocol_scheme">fb1061378927569990</string>
    <string name="custom"> Custom </string>
    <string name="strategy"> Strategy </string>
    <string name="player2"> dual player</string>
    <string name="player3"> traingular player</string>
    <string name="player4"> quadruple player </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="action_settings">Settings</string>
    <string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="logout_text">Sign out</string>
    <string name="fb_login_text">Sign in with facebook</string>
    <string name="twitter_login_text">Sign in with Twitter</string>
    <string name="google_login_text">Sign in with Google</string>
    <string name="or">or</string>

    <!-- hints -->
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="username_email_hint">Username/Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="forgot">forgot?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">No account yet? Create one</string>
    <string name="sign_up_button">Sign up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_smart_login">SmartLoginActivity</string>
    <string name="config_data">config</string>

    <string name="network_error">Something went wrong. Please check Network Connection.</string>
    <string name="username_error">Please enter your username</string>
    <string name="email_error">Please enter your email</string>
    <string name="password_error">Please choose a password</string>
    <string name="no_email_error">You need an email to sign up</string>
    <string name="invalid_email_error">Please enter a valid email</string>

    <string name="loading_holder">Please wait…</string>
    <string name="logging_holder">Logging in…</string>
    <string name="getting_data">Getting User Info…</string>
    <string name="password_mismatch">Make sure your passwords match</string>
    <string name="login_failed">Login failed! Try again!</string>
    <string name="press_for_dice_roll">Press for Dice Roll</string>
    <string name="dice" />
    <string name="dice_number_spin_it">Dice Number : ? Spin it</string>
</resources>
