<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/guidelineHalf"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context=".PlayerSelectionFragment">

    <Button
        android:id="@+id/two"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/buttonpannel"
        android:layout_weight="1"
        android:text="@string/player2" />
    <Button
        android:id="@+id/three"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/buttonpannel"
        android:text="@string/player3" />
    <Button
        android:id="@+id/four"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:background="@drawable/buttonpannel"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/player4" />

</LinearLayout>