<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/d"
    android:gravity="center_vertical"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:theme="@style/AppTheme"
        android:id="@+id/email_text_input_layout"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/accent_color"
            android:layout_marginBottom="16dp"
            android:hint="Email"
            android:inputType="textNoSuggestions|textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/password_text_input_layout"
        android:theme="@style/AppTheme">

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/accent_color"
            android:layout_marginBottom="16dp"
            android:hint="Password"
            android:inputType="textNoSuggestions|textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/custom_signin_button"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/button_round"
        android:tag="custom_login_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:drawableTint="@color/green_800" />

    <TextView
        android:id="@+id/custom_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="No account yet? Create one"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_400"/>
        <TextView
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="or"
            android:textColor="@color/grey_400"/>
        <View
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grey_400"/>
    </LinearLayout>




    <Button
        android:id="@+id/facebook_login_button"
        android:layout_width="201dp"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:background="@drawable/fb_button"
        android:drawableStart="@drawable/ic_facebook_white_36dp"
        android:tag="facebook_login_button"
        android:text="@string/sign_in_facebook"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/google_login_button"
        android:layout_width="194dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/gmail_button"
        android:drawableStart="@drawable/ic_google_plus_white_36dp"
        android:drawableLeft="@drawable/ic_google_plus_white_36dp"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:tag="google_login_button"
        android:text="@string/sign_in_google"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="151dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/gmail_button"
        android:text="@string/logout_text"
        android:textColor="@color/white" />


</LinearLayout>